Bug 31264 - internal compiler error: in build_int_cst_wide, at tree.c:886
Summary: internal compiler error: in build_int_cst_wide, at tree.c:886
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: tree-optimization (show other bugs)
Version: 4.3.0
: P3 major
Target Milestone: ---
Assignee: Andrew Haley
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-03-19 14:42 UTC by Mohan Embar
Modified: 2007-05-08 10:44 UTC (History)
3 users (show)

See Also:
Host: i686-apple-darwin8
Target: i686-apple-darwin8 and powerpc-apple-darwin8
Build: i686-apple-darwin8
Known to work:
Known to fail:
Last reconfirmed: 2007-03-19 15:00:26


Attachments
javolution.jar (BSD license) (224.06 KB, application/octet-stream)
2007-03-19 14:43 UTC, Mohan Embar
Details
temps file (103.99 KB, application/octet-stream)
2007-03-19 14:44 UTC, Mohan Embar
Details
Failing routine (405 bytes, text/x-java)
2007-03-19 15:53 UTC, Andrew Haley
Details
. (385 bytes, application/x-java-archive)
2007-03-19 15:57 UTC, Andrew Haley
Details
.class file (329 bytes, application/octet-stream)
2007-03-19 16:30 UTC, Andrew Haley
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mohan Embar 2007-03-19 14:42:04 UTC
imac20:/tmp/javolution mohanembar$ i686-apple-darwin8-gcj -v -save-temps -c -O2 javolution.jar
Using built-in specs.
Reading specs from /datal/gcc/i686-apple-darwin8/bin/../lib/gcc/i686-apple-darwin8/4.3.0/../../../libgcj.spec
rename spec startfile to startfileorig
rename spec lib to liborig
Target: i686-apple-darwin8
Configured with: /datal/gcc/gcc/configure --build=i686-apple-darwin8 --target=i686-apple-darwin8 --disable-shared --enable-static --disable-multilib --disable-checking --disable-gconf-peer --disable-plugin --prefix=/datal/gcc/i686-apple-darwin --enable-languages=c,java,objc --with-gmp=/opt/local --with-mpfr=/opt/local
Thread model: posix
gcc version 4.3.0 20070311 (experimental)
 /datal/gcc/i686-apple-darwin8/bin/../libexec/gcc/i686-apple-darwin8/4.3.0/jc1 javolution.jar -fhash-synchronization -fuse-divide-subroutine -fcheck-references -fuse-boehm-gc -fkeep-inline-functions -fPIC -mmacosx-version-min=10.4 -quiet -dumpbase javolution.jar -mtune=generic -march=nocona -auxbase javolution -O2 -version -fbootclasspath=./:/datal/gcc/i686-apple-darwin8/bin/../lib/gcc/../../share/java/libgcj-4.3.0.jar -faux-classpath javolution.zip -o javolution.s
GNU Java version 4.3.0 20070311 (experimental) (i686-apple-darwin8)
        compiled by GNU C version 4.3.0 20070311 (experimental).
GGC heuristics: --param ggc-min-expand=100 --param ggc-min-heapsize=131072
Class path starts here:
    javolution.zip/ (zip)
    ./ (system)
    /datal/gcc/i686-apple-darwin8/bin/../lib/gcc/../../share/java/libgcj-4.3.0.jar/ (system) (zip)
javolution/lang/MathLib.java: In class 'javolution.lang.MathLib':
javolution/lang/MathLib.java: In method 'javolution.lang.MathLib.toLongPow2(double,int)':
javolution/lang/MathLib.java:0: internal compiler error: in build_int_cst_wide, at tree.c:886
Please submit a full bug report,
with preprocessed source if appropriate.
See <URL:http://gcc.gnu.org/bugs.html> for instructions.
Comment 1 Mohan Embar 2007-03-19 14:43:36 UTC
Created attachment 13230 [details]
javolution.jar (BSD license)

source & distribution from http://www.javolution.org/
Comment 2 Mohan Embar 2007-03-19 14:44:44 UTC
Created attachment 13231 [details]
temps file
Comment 3 Andrew Haley 2007-03-19 15:53:08 UTC
Created attachment 13232 [details]
Failing routine

A stripped-down test case that demonstrates the failure.
Comment 4 Andrew Haley 2007-03-19 15:57:05 UTC
Created attachment 13233 [details]
.
Comment 5 Andrew Haley 2007-03-19 16:30:50 UTC
Created attachment 13234 [details]
.class file

Compile this with gcc/trunk/install/bin/gcj MathLib.class -c -O2
Comment 6 Andrew Haley 2007-03-20 12:45:33 UTC
Subject: Bug 31264

Author: aph
Date: Tue Mar 20 12:45:19 2007
New Revision: 123085

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=123085
Log:
2007-03-19  Andrew Haley  <aph@redhat.com>

        PR tree-optimization/31264
        * tree-vrp.c (register_edge_assert_for_1): Don't look though
        VIEW_CONVERT_EXPRs.

2007-03-20  Andrew Haley  <aph@redhat.com>

        * testsuite/libjava.lang/PR31264.java: New test.


Added:
    trunk/libjava/testsuite/libjava.lang/PR31264.jar   (with props)
    trunk/libjava/testsuite/libjava.lang/PR31264.java
    trunk/libjava/testsuite/libjava.lang/PR31264.out
Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/tree-vrp.c
    trunk/libjava/ChangeLog

Propchange: trunk/libjava/testsuite/libjava.lang/PR31264.jar
            ('svn:mime-type' added)


Comment 7 Mohan Embar 2007-03-20 22:45:32 UTC
This fix works for me. Thanks. Not sure who's responsible for closing this out.
Comment 8 Andrew Pinski 2007-03-20 22:46:50 UTC
Fixed.